# Locks

./: .gitignore  .gitmodules  .pre-commit-config.yaml  BUILD.md  CLAUDE.md  CMakeLists.txt  Cargo.toml  README.md  RESEARCH_PLAN.md  STATUS_REPORT.md  TODO.md  devenv.nix  example  example.c  example.h  experiment.nu  experiment.sh  initialize.sh  justfile  lock_tester.c  perf-test.sh  profile.nu  rust.code-workspace  summarize_arrows.py  typstfmt-config.toml  xmake.lua
.cargo/: config.toml
CCsynch/: ccsynch.c  ccsynch.h
FlatCombining/: README.md  flatcombining.c  flatcombining.h
FlatCombiningFair/: flatcombiningfair.c  flatcombiningfair.h
FlatCombining_rs/: Cargo.toml
RCL/: localatomic.h  rcl.c  rcl.h
Rust_Implementation/: Cargo.toml
Rust_Implementation/benches/: benchmark.rs
Rust_Implementation/output/: Flat Combining.csv  Mutex.csv  RCL.csv
Rust_Implementation/src/: benchmark.rs  ccsynch.rs  dlock.rs  flatcombining.rs  main.rs  operation.rs  rcl.rs  syncptr.rs  unit_test.rs
Rust_Implementation/src/rcl/: rcllock.rs  rclrequest.rs  rclserver.rs  rclthread.rs
Rust_Implementation/src/rcl/rcllock/: rcllockptr.rs
benches/: benchmark.rs
c/: .clangd  CMakeLists.txt  README.md  example.c  xmake.lua
c/CCsynch/: ccsynch.c  ccsynch.h
c/FlatCombining/fair_ban/: flatcombiningfair.c  flatcombiningfair.h
c/FlatCombining/fair_pq/: flatcombiningfairpq.c  flatcombiningfairpq.h
c/FlatCombining/original/: flatcombining.c  flatcombining.h
c/cfl/: cfl.c  cfl.h
c/shared/: common.h  lockfree_stack.c  locktypeenum.h  priority_queue.h
c/shfllock/: aqs.c  aqs.h
c/ticket/: ticket.c  ticket.h
c/unit_test/: lockfree_stack_test.h  unit_test.h
docs/: EXPERIMENT_PLAN.md  EXPERIMENT_RESULTS_DEMO.md
meeting records/: 3-12.typ  3-19.typ
profiles/: dlock2-cc-ban.stats  dlock2-cc-ban.txt  dlock2-cc.stats  dlock2-cc.txt  dlock2-fc-ban.stats  dlock2-fc-ban.txt  dlock2-fc-pq-b-heap.stats  dlock2-fc-pq-b-heap.txt  dlock2-fc-pq-b-tree.stats  dlock2-fc-pq-b-tree.txt  dlock2-fc-sl.stats  dlock2-fc-sl.txt  dlock2-fc.stats  dlock2-fc.txt  dlock2-mutex.stats  dlock2-mutex.txt  (+4 more)
rust/: .gitignore  Cargo.toml  README.md  build.rs  perf.data
rust/.cargo/: config.toml
rust/benches/: benchmark.rs
rust/examples/: counter.rs
rust/lib-dlock/: Cargo.toml  build.rs
rust/lib-dlock/binding/: wrapper.h
rust/lib-dlock/src/: c_binding.rs  ccsynch_fair_ban.rs  dlock.rs  dlock2.rs  dlock2_unit_test.rs  fc.rs  fc_fair_ban.rs  fc_fair_ban_slice.rs  fc_fair_skiplist.rs  fc_sl.rs  fc_sl_naive.rs  guard.rs  lib.rs  parker.rs  sequential_priority_queue.rs  spin_lock.rs  syncptr.rs  u_scl.rs  unit_test.rs
rust/lib-dlock/src/c_binding/: ccsynch.rs  flatcombining.rs
rust/lib-dlock/src/dlock/: ccsynch.rs  ccsynch_fair_ban.rs  fc_fair_ban.rs  fc_fair_ban_slice.rs  fc_sl.rs  fc_sl_naive.rs  mutex_extension.rs
rust/lib-dlock/src/dlock/ccsynch/: node.rs
rust/lib-dlock/src/dlock/ccsynch_fair_ban/: node.rs
rust/lib-dlock/src/dlock/fc/: fclock.rs  node.rs
rust/lib-dlock/src/dlock/fc_fair_ban/: node.rs
rust/lib-dlock/src/dlock/fc_fair_ban_slice/: node.rs
rust/lib-dlock/src/dlock/fc_sl/: node.rs
rust/lib-dlock/src/dlock/fc_sl_naive/: node.rs
rust/lib-dlock/src/dlock/rcl/: rcllock.rs  rclrequest.rs  rclserver.rs
rust/lib-dlock/src/dlock2/: cc.rs  cc_ban.rs  combiner_stat.rs  fc.rs  fc_ban.rs  fc_pq.rs  fc_sl.rs  mcs.rs  mutex.rs  spinlock.rs  uscl.rs
rust/lib-dlock/src/dlock2/cc/: lock.rs  node.rs
rust/lib-dlock/src/dlock2/cc_ban/: lock.rs  node.rs
rust/lib-dlock/src/dlock2/dsm/: lock.rs  node.rs
rust/lib-dlock/src/dlock2/fc/: fclock.rs  lock.rs  node.rs
rust/lib-dlock/src/dlock2/fc_ban/: lock.rs  node.rs
rust/lib-dlock/src/dlock2/fc_pq/: lock.rs  node.rs
rust/lib-dlock/src/dlock2/fc_pq/lock/: buffer.rs
rust/lib-dlock/src/dlock2/fc_sl/: lock.rs  node.rs
rust/lib-dlock/src/dlock2/rcl/: rclrequest.rs  rclserver.rs  rclthread.rs
rust/lib-dlock/src/dlock2/shfl_lock/: lock.rs
rust/lib-dlock/src/fc/: fclock.rs  node.rs
rust/lib-dlock/src/fc_fair_ban/: node.rs
rust/lib-dlock/src/fc_fair_ban_slice/: node.rs
rust/lib-dlock/src/fc_fair_skiplist/: node.rs
rust/lib-dlock/src/output/: CCSynch.csv  Flat Combining.csv
rust/lib-dlock/src/parker/: spin_parker.rs
rust/lib-dlock/src/rcl/: rclthread.rs
rust/lib-dlock/src/u_scl/: scl_gurad.rs
rust/lib-dlock/u-scl/: fairlock.c
rust/src/: benchmark.rs  ccsynch.rs  ccsynch_fair_ban.rs  command_parser.rs  dlock.rs  fc_fair_ban.rs  fc_fair_ban_slice.rs  fc_fair_skiplist.rs  flatcombining.rs  flatcombining2.rs  flatcombining_fair_ban.rs  guard.rs  lib.rs  main.rs  mutex_extension.rs  operation.rs  parker.rs  raw_spin_lock.rs  rcl.rs  spin_lock.rs  syncptr.rs  u_scl.rs  unit_test.rs  waiter.rs
rust/src/benchmark/: README.md  bencher.rs  counter_job.rs  dlock.rs  dlock2.rs  helper.rs  non_cs_counter.rs  old_records.rs  one_three_ratio_counter.rs  proposion_counter.rs  records.rs  response_time.rs  response_time_single_addition.rs  response_time_variable.rs  subversion_job.rs
rust/src/benchmark/dlock/: one_three_ratio_counter.rs  proposion_counter.rs  response_time_single_addition.rs  response_time_variable.rs  subversion_job.rs
rust/src/benchmark/dlock2/: fetch_and_multiply.rs  linkedlist.rs  priority_queue.rs  proportional_counter.rs  queue.rs
rust/src/benchmark/dlock2/priority_queue/: extension.rs
rust/src/benchmark/dlock2/queue/: extension.rs
rust/src/benchmark/records/: spec.rs
rust/src/ccsynch/: node.rs
rust/src/ccsynch_fair_ban/: node.rs
rust/src/command_parser/: experiment.rs  lock_target.rs
rust/src/fc/: fclock.rs  node.rs
rust/src/fc_fair_ban/: node.rs
rust/src/fc_fair_ban_slice/: node.rs
rust/src/fc_fair_skiplist/: node.rs
rust/src/flatcombining/: fclock.rs  node.rs
rust/src/flatcombining2/: record.rs
rust/src/flatcombining_fair_ban/: node.rs
rust/src/output/: Mutex.csv
rust/src/parker/: block_parker.rs  spin_block_parker.rs  spin_parker.rs
rust/src/rcl/: rcllock.rs  rclrequest.rs  rclserver.rs  rclthread.rs
rust/src/rcl/rcllock/: rcllockptr.rs
rust/u-scl/: common.h
(+271 files in other folders)
