[package]
name = "tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core_affinity = "0.8.0"
intrusive-collections = "0.9.5"
linux-futex = "0.2.0"
lockfree = "0.5.1"
num_cpus = "1.15.0"
once_cell = "1.17.1"
quanta = "0.10.1"
thread_local = "1.1"

[profile.release-with-debug]
inherits = "release"
debug = true
