[package]
name = "dlock"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "counter"
path = "src/bin/counter.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core_affinity = "0.8.0"
csv = "1.2.1"
intrusive-collections = "0.9.5"
linux-futex = "0.2.0"
lockfree = "0.5.1"
num_cpus = "1.15.0"
once_cell = "1.17.1"
quanta = "0.10.1"
thread_local = "1.1"
serde = { version = "1", features = ["derive"] }
serde_with = "2.3.1"
criterion = { version = "0.4", features = ["html_reports"] }
serial_test = "2.0.0"

[profile.release-with-debug]
inherits = "release"
debug = true

[[bench]]
name = "benchmark"
harness = false
