[package]
name = "dlock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.68.1"

[features]
default = ["combiner_stat"]
combiner_stat = []


[dependencies]
clap = { version = "4.3.12", features = ["derive"] }
strum = { version = "0.25", features = ["derive"] }
csv = "1.2.1"
itertools = "0.11.0"
serde = { version = "1", features = ["derive", "rc"] }
serde_with = { version = "3.0.0" }
libdlock = {path = "./lib-dlock"}
core_affinity = "0.8.0"
quanta = "0.12.0"
criterion = { version = "0.5.1", features = ["html_reports"] }
debug_print = "1.0.0"
thread-priority = "0.13.1"
coalesce = "0.1.1"
histo = "1.0.0"



[profile.release-with-debug]
inherits = "release"
debug = true

[[bench]]
name = "benchmark"
harness = false
