[package]
name = "libdlock"
version = "0.1.0"
edition = "2021"


[features]
default = ["combiner_stat"]
combiner_stat = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0"
cc = "1.0"

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
csv = "1"
itertools = "0.12.1"
serde = { version = "1", features = ["derive", "rc"] }
serde_with = { version = "3" }
serial_test = { version = "3" }


[dependencies]
core_affinity = "0"
intrusive-collections = "0.9"
linux-futex = "0.2.0"
num_cpus = "1"
once_cell = "1"
quanta = "0.12"
thread_local = "1.1"
criterion = { version = "0.5.1", features = ["html_reports"] }
enum_dispatch = "0.3"
crossbeam = "0.8"
crossbeam-skiplist = "0.1"
proc-macro2 = { version = ">=1.0.63" }
fastrand = "2"
trait-set = "0.3.0"
strum = { version = "0.26", features = ["derive"] }
derivative = "2.2.0"
debug_unwraps = "0.1.0"

[profile.release-with-debug]
inherits = "release"
debug = true
